exclude JMock1 tests (#232)