@@ -622,17 +622,22 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
-<!-- activate on jvm >= 9 only
             <argLine>
-                - -add-opens java.base/java.lang=ALL-UNNAMED
-                - -add-opens java.base/java.util=ALL-UNNAMED
-                - -add-opens java.base/java.io=ALL-UNNAMED
+              --add-opens java.base/java.lang=ALL-UNNAMED
+              --add-opens java.base/java.util=ALL-UNNAMED
+              --add-opens java.base/java.io=ALL-UNNAMED
             </argLine>
--->
             <includes>
               <!-- XWiki rule is to put test in *Test classes -->
               <include>**/*Test.class</include>
             </includes>
+            <excludes>
+              <!-- exclude these old jmock tests, they don't run on new jvm's -->
+              <exclude>**/com/xpn/xwiki/plugin/zipexplorer/ZipExplorerTest.java</exclude>              
+              <exclude>**/com/xpn/xwiki/render/XWikiRadeoxRendererTest</exclude>
+              <exclude>**/com/xpn/xwiki/render/XWikiVelocityRendererTest.java</exclude>
+              <exclude>**/com/xpn/xwiki/web/XWikiMessageToolTest.java</exclude>
+            </excludes>
             <!-- Prevent Out Of Memory errors resulting from tests that do no free up the memory correctly -->
             <forkMode>pertest</forkMode>
           </configuration>
